# cmake-project-template

./: CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  build-and-run  build.Test.ps1  build.ps1  cmake.ps1  debugConfig.h.in
test/: CMakeLists.txt
